--- a/my-website/static/admin/config.yml
+++ b/my-website/static/admin/config.yml
@@ -20,6 +20,20 @@ collections:
     - { name: title, label: Title, widget: string }
     - { name: body, label: Body, widget: markdown }
     - { name: slug, label: Slug, widget: string }
+
+- name: docs
+  label: "docs"
+  folder: my-website/docs
+  identifier_field: title
+  extension: md
+  widget: "list"
+  create: true
+  slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+  fields:
+    - { name: title, label: Title, widget: string }
+    - { name: body, label: Body, widget: markdown }
+    - { name: slug, label: Slug, widget: string }
+    
     
     
         
