--- a/my-website/static/admin/config.yml
+++ b/my-website/static/admin/config.yml
@@ -33,6 +33,20 @@ collections:
     - { name: title, label: Title, widget: string }
     - { name: body, label: Body, widget: markdown }
     - { name: slug, label: Slug, widget: string }
+
+- name: stories
+  label: "mdx"
+  folder: my-website/docs/tutorial-basics
+  identifier_field: title
+  extension: mdx
+  create: true
+  slug: '{{title}}.stories' # Filename template, e.g., title.stories.mdx
+  format: yaml-frontmatter
+  frontmatter_delimiter: ['<!--', '-->']
+  fields: # The fields for each document, usually in front matter
+    - { label: 'Title', name: 'title', widget: string }
+    - { label: 'Body', name: 'body', widget: 'markdown', modes: ['raw'] }
+ 
     
     
     
