--- a/my-website/static/admin/config.yml
+++ b/my-website/static/admin/config.yml
@@ -2,6 +2,7 @@ backend:
   name: github
   branch: 1st-branch 
   repo: rbd106/tk
+  publish_mode: editorial_workflow
 
 # These lines should *not* be indented
 media_folder: "static/img" # Media files will be stored in the repo under static/images/uploads
