--- a/my-website/static/admin/config.yml
+++ b/my-website/static/admin/config.yml
@@ -1,8 +1,9 @@
 backend:
   name: github
-  branch: 1st-branch 
+  branch: main
   repo: rbd106/tk
-  publish_mode: editorial_workflow
+  
+publish_mode: editorial_workflow
 
 # These lines should *not* be indented
 media_folder: "static/img" # Media files will be stored in the repo under static/images/uploads
