--- a/my-website/static/admin/config.yml
+++ b/my-website/static/admin/config.yml
@@ -5,6 +5,8 @@ backend:
   
 publish_mode: editorial_workflow
 
+local_backend: true
+
 # These lines should *not* be indented
 media_folder: "static/img" # Media files will be stored in the repo under static/images/uploads
 public_folder: "/img/" # The src attribute for uploaded media will begin with /images/uploads
